...
        )}
        <Button
          onPress={() => {
            posthog?.capture('feedback button pressed');
            router.push('/(app)/feedback');
          }}
          testID="profile-feedback"
          accessibilityLabel={t('submitFeedback')}
        >
          <Text>{t('submitFeedback')}</Text>
        </Button>
        {/* User Profile Information */}
        {currentUser && (
...
          </Alert>
        )}
        {/* Save Button */}
        <FormSubmit
          onPress={handleFormSubmit}
          disabled={!isOnline}
          testID="profile-submit"
        >
          <Text>{t('submit')}</Text>
        </FormSubmit>

        {/* Language Selection - Not part of password reset form */}
        <FormField
...
            <FormItem>
              <LanguageCombobox
                value={field.value}
                onChange={(languoid) => field.onChange(languoid.id)}
                uiReadyOnly
                toggleUILocalization
                testID="profile-language"
                searchTestID="language-search"
              />
              <FormMessage />
            </FormItem>
          )}
        />
...
